Fix responsive layout issues

--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -224,7 +224,22 @@ div.content {
   background-color: #FAFAFA;
 }
 
+@media only screen and (width <=550px) {
+  .search-dialog-content {
+    width: calc(100%- 20px);
+    max-width: 480px;
+  }
+}
+
+@media only screen and (width <=960px) and (width >550px) {
+  .search-dialog-content {
+    width: 480px;
+    overflow-x: hidden;
+  }
+}
+
 @media only screen and (width <=960px) {
+
   .buttons {
     margin-top: 15px;
     margin-bottom: 5px;
